plugins {
    id 'java-library'
    id 'eclipse'
	id 'org.springframework.boot' version '2.7.2' apply false
}

apply plugin: 'java-library'
apply plugin: 'io.spring.dependency-management'

dependencyManagement {
	imports {
		mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
	}
}

description = 'SolarNet: OSCP'
version = '1.0.0'
archivesBaseName = 'solarnet-oscp'

sourceCompatibility = 17
targetCompatibility = 17

configurations {
	all*.exclude group: 'log4j', module: 'log4j'
	all*.exclude group: 'org.slf4j', module: 'slf4j-log4j12'
}

dependencies {
	implementation project(':solarnet-common')
	implementation project(':solarnet-user')

	// Spring
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.security:spring-security-core'
	implementation 'org.springframework:spring-web'
	
	// DAO
	runtimeOnly "org.postgresql:postgresql"
	
	// JSON
	implementation 'com.fasterxml.jackson.core:jackson-annotations'
	implementation 'com.fasterxml.jackson.core:jackson-core'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	
	// Utilities
	implementation 'com.fasterxml.uuid:java-uuid-generator:4.0.1'
	implementation 'javax.annotation:javax.annotation-api'
	implementation 'org.apache.commons:commons-lang3'
	implementation 'org.hibernate.validator:hibernate-validator'
	implementation 'org.slf4j:slf4j-api'
	
	// SolarNetwork
	api 'net.solarnetwork.external:net.solarnetwork.external.oscp:1.0.1'
	
	// Testing
	testImplementation project(':solarnet-common-test')
}

jar.manifest {
    attributes('Implementation-Version': version)
}

eclipse {
	jdt {
		javaRuntimeName 'JavaSE-17'
	}
}
